crates/plotnik-tests/tests/03-analyze/predicates/regex_lookbehind.txt
Q = (identifier =~ /(?<=foo)bar/)
------------------ DIAGNOSTICS -------------------
error: lookahead/lookbehind is not supported in regex
 --> query.ptk:1:22
  |
1 | Q = (identifier =~ /(?<=foo)bar/)
  |                      ^^^
  |
help: some target engines cannot match lookaround; match the surrounding context with the query pattern instead
-------------------- SYMBOLS ---------------------
